--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/home/bamzhie/Documents/IG/public/vite.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Flashy</title>
   </head>
   <body>
     <div id="root"></div>
